Instalando paquete de Sqlite

--- a/Tasks_System_Win.csproj
+++ b/Tasks_System_Win.csproj
@@ -15,4 +15,8 @@
     <Folder Include="UI\Registros\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.11" />
+  </ItemGroup>
+
 </Project>
