--- a/Tasks_System_Win.csproj
+++ b/Tasks_System_Win.csproj
@@ -7,6 +7,28 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\icons8-eliminar-16.png" />
+    <None Remove="Resources\icons8-google-web-search-24.png" />
+    <None Remove="Resources\icons8-guardar-48.png" />
+    <None Remove="Resources\icons8-nuevo-48.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\icons8-eliminar-16.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\icons8-google-web-search-24.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\icons8-guardar-48.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\icons8-nuevo-48.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="DATA\" />
   </ItemGroup>
 
